// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTableOfRecords basic - empty 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody />
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords basic - with records 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="1_name_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="2_name_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="3_name_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords with pagination - 2nd page 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="1_name_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="2_name_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <div>
    <EuiSpacer
      size="m"
    />
    <EuiTablePagination
      activePage={1}
      itemsPerPage={3}
      itemsPerPageOptions={
        Array [
          5,
          10,
          20,
        ]
      }
      onChangeItemsPerPage={[Function]}
      onChangePage={[Function]}
      pageCount={2}
    />
  </div>
</div>
`;

exports[`EuiTableOfRecords with pagination 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="1_name_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="2_name_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="3_name_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <div>
    <EuiSpacer
      size="m"
    />
    <EuiTablePagination
      activePage={0}
      itemsPerPage={3}
      itemsPerPageOptions={
        Array [
          5,
          10,
          20,
        ]
      }
      onChangeItemsPerPage={[Function]}
      onChangePage={[Function]}
      pageCount={2}
    />
  </div>
</div>
`;

exports[`EuiTableOfRecords with pagination and selection 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="1_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="1_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="1_name_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="2_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="2_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="2_name_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="3_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="3_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="3_name_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <div>
    <EuiSpacer
      size="m"
    />
    <EuiTablePagination
      activePage={0}
      itemsPerPage={3}
      itemsPerPageOptions={
        Array [
          5,
          10,
          20,
        ]
      }
      onChangeItemsPerPage={[Function]}
      onChangePage={[Function]}
      pageCount={2}
    />
  </div>
</div>
`;

exports[`EuiTableOfRecords with pagination, selection and sorting 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="name_0"
        onSort={[Function]}
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="1_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="1_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="1_name_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="2_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="2_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="2_name_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="3_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="3_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="3_name_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <div>
    <EuiSpacer
      size="m"
    />
    <EuiTablePagination
      activePage={0}
      itemsPerPage={3}
      itemsPerPageOptions={
        Array [
          5,
          10,
          20,
        ]
      }
      onChangeItemsPerPage={[Function]}
      onChangePage={[Function]}
      pageCount={2}
    />
  </div>
</div>
`;

exports[`EuiTableOfRecords with pagination, selection, sorting and a single record action 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="name_0"
        onSort={[Function]}
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
      <EuiTableHeaderCell
        align="right"
        key="_actions_1"
        scope="col"
      />
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="1_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="1_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="1_name_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="1_record_actions_1"
          textOnly={false}
        >
          <EuiButton
            color="primary"
            fill={false}
            iconSide="left"
            isDisabled={false}
            key="1_action_button_0"
            onClick={[Function]}
            onMouseOver={[Function]}
            size="s"
            style={
              Object {
                "opacity": 0,
              }
            }
            title="edit"
            type="button"
          >
            Edit
          </EuiButton>
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="2_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="2_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="2_name_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="2_record_actions_1"
          textOnly={false}
        >
          <EuiButton
            color="primary"
            fill={false}
            iconSide="left"
            isDisabled={false}
            key="2_action_button_0"
            onClick={[Function]}
            onMouseOver={[Function]}
            size="s"
            style={
              Object {
                "opacity": 0,
              }
            }
            title="edit"
            type="button"
          >
            Edit
          </EuiButton>
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="3_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="3_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="3_name_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="3_record_actions_1"
          textOnly={false}
        >
          <EuiButton
            color="primary"
            fill={false}
            iconSide="left"
            isDisabled={false}
            key="3_action_button_0"
            onClick={[Function]}
            onMouseOver={[Function]}
            size="s"
            style={
              Object {
                "opacity": 0,
              }
            }
            title="edit"
            type="button"
          >
            Edit
          </EuiButton>
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <div>
    <EuiSpacer
      size="m"
    />
    <EuiTablePagination
      activePage={0}
      itemsPerPage={3}
      itemsPerPageOptions={
        Array [
          5,
          10,
          20,
        ]
      }
      onChangeItemsPerPage={[Function]}
      onChangePage={[Function]}
      pageCount={2}
    />
  </div>
</div>
`;

exports[`EuiTableOfRecords with pagination, selection, sorting and column dataType 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="right"
        isSortAscending={false}
        isSorted={false}
        key="count_0"
        onSort={[Function]}
        scope="col"
      >
        Count
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="1_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="1_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="right"
          key="1_count_0"
          textOnly={true}
        >
          1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="2_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="2_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="right"
          key="2_count_0"
          textOnly={true}
        >
          2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="3_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="3_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="right"
          key="3_count_0"
          textOnly={true}
        >
          3
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <div>
    <EuiSpacer
      size="m"
    />
    <EuiTablePagination
      activePage={0}
      itemsPerPage={3}
      itemsPerPageOptions={
        Array [
          5,
          10,
          20,
        ]
      }
      onChangeItemsPerPage={[Function]}
      onChangePage={[Function]}
      pageCount={2}
    />
  </div>
</div>
`;

exports[`EuiTableOfRecords with pagination, selection, sorting and column renderer 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="name_0"
        onSort={[Function]}
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="1_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="1_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="1_name_0"
          textOnly={false}
        >
          NAME1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="2_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="2_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="2_name_0"
          textOnly={false}
        >
          NAME2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="3_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="3_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="3_name_0"
          textOnly={false}
        >
          NAME3
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <div>
    <EuiSpacer
      size="m"
    />
    <EuiTablePagination
      activePage={0}
      itemsPerPage={3}
      itemsPerPageOptions={
        Array [
          5,
          10,
          20,
        ]
      }
      onChangeItemsPerPage={[Function]}
      onChangePage={[Function]}
      pageCount={2}
    />
  </div>
</div>
`;

exports[`EuiTableOfRecords with pagination, selection, sorting and multiple record actions 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="name_0"
        onSort={[Function]}
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
      <EuiTableHeaderCell
        align="right"
        key="_actions_1"
        scope="col"
      />
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="1_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="1_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="1_name_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="1_record_actions_1"
          textOnly={false}
        >
          <EuiPopover
            anchorPosition="leftCenter"
            button={
              <EuiButtonIcon
                aria-label="Actions"
                color="text"
                iconType="gear"
                isDisabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "opacity": 0,
                  }
                }
                type="button"
              />
            }
            closePopover={[Function]}
            id="1-actions"
            isOpen={false}
            ownFocus={false}
            panelPaddingSize="none"
          >
            <EuiContextMenuPanel
              hasFocus={true}
              items={
                Array [
                  <EuiContextMenuItem
                    disabled={false}
                    icon={undefined}
                    onClick={[Function]}
                  >
                    Edit
                  </EuiContextMenuItem>,
                  <EuiContextMenuItem
                    disabled={false}
                    icon={undefined}
                    onClick={[Function]}
                  >
                    Delete
                  </EuiContextMenuItem>,
                ]
              }
            />
          </EuiPopover>
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="2_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="2_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="2_name_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="2_record_actions_1"
          textOnly={false}
        >
          <EuiPopover
            anchorPosition="leftCenter"
            button={
              <EuiButtonIcon
                aria-label="Actions"
                color="text"
                iconType="gear"
                isDisabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "opacity": 0,
                  }
                }
                type="button"
              />
            }
            closePopover={[Function]}
            id="2-actions"
            isOpen={false}
            ownFocus={false}
            panelPaddingSize="none"
          >
            <EuiContextMenuPanel
              hasFocus={true}
              items={
                Array [
                  <EuiContextMenuItem
                    disabled={false}
                    icon={undefined}
                    onClick={[Function]}
                  >
                    Edit
                  </EuiContextMenuItem>,
                  <EuiContextMenuItem
                    disabled={false}
                    icon={undefined}
                    onClick={[Function]}
                  >
                    Delete
                  </EuiContextMenuItem>,
                ]
              }
            />
          </EuiPopover>
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="3_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="3_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="3_name_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="3_record_actions_1"
          textOnly={false}
        >
          <EuiPopover
            anchorPosition="leftCenter"
            button={
              <EuiButtonIcon
                aria-label="Actions"
                color="text"
                iconType="gear"
                isDisabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "opacity": 0,
                  }
                }
                type="button"
              />
            }
            closePopover={[Function]}
            id="3-actions"
            isOpen={false}
            ownFocus={false}
            panelPaddingSize="none"
          >
            <EuiContextMenuPanel
              hasFocus={true}
              items={
                Array [
                  <EuiContextMenuItem
                    disabled={false}
                    icon={undefined}
                    onClick={[Function]}
                  >
                    Edit
                  </EuiContextMenuItem>,
                  <EuiContextMenuItem
                    disabled={false}
                    icon={undefined}
                    onClick={[Function]}
                  >
                    Delete
                  </EuiContextMenuItem>,
                ]
              }
            />
          </EuiPopover>
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <div>
    <EuiSpacer
      size="m"
    />
    <EuiTablePagination
      activePage={0}
      itemsPerPage={3}
      itemsPerPageOptions={
        Array [
          5,
          10,
          20,
        ]
      }
      onChangeItemsPerPage={[Function]}
      onChangePage={[Function]}
      pageCount={2}
    />
  </div>
</div>
`;

exports[`EuiTableOfRecords with pagination, selection, sorting, column renderer and column dataType 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="right"
        isSortAscending={false}
        isSorted={false}
        key="count_0"
        onSort={[Function]}
        scope="col"
      >
        Count
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="1_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="1_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="right"
          key="1_count_0"
          textOnly={false}
        >
          x
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="2_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="2_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="right"
          key="2_count_0"
          textOnly={false}
        >
          xx
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="3_selection_column"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="3_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="right"
          key="3_count_0"
          textOnly={false}
        >
          xxx
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <div>
    <EuiSpacer
      size="m"
    />
    <EuiTablePagination
      activePage={0}
      itemsPerPage={3}
      itemsPerPageOptions={
        Array [
          5,
          10,
          20,
        ]
      }
      onChangeItemsPerPage={[Function]}
      onChangePage={[Function]}
      pageCount={2}
    />
  </div>
</div>
`;

exports[`EuiTableOfRecords with sorting 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={true}
        isSorted={true}
        key="name_0"
        onSort={[Function]}
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="1_name_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="2_name_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="3_name_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;
